@@ -1,28 +1,24 @@
-#include "EvrConfig.hh"
+#include "EvrConfig_V1.hh"
 
-#include "EvrPulseConfig.hh"
-#include "EvrOutputMap.hh"
+#include "pdsapp/config/EvrPulseConfig.hh"
+#include "pdsapp/config/EvrOutputMap.hh"
 
 #include "pdsapp/config/Parameters.hh"
 #include "pdsapp/config/ParameterSet.hh"
-#include "pds/config/EvrConfigType.hh"
+#include "pdsdata/evr/ConfigV1.hh"
+#include "pdsdata/evr/PulseConfig.hh"
+#include "pdsdata/evr/OutputMap.hh"
 
 #include <new>
 
 using namespace Pds_ConfigDb;
 
 namespace Pds_ConfigDb {
-
-  static const char* beam_range[] = { "Off", "On", NULL };
-  static const char* rate_range[] = { "120Hz", "60Hz", "30Hz", "10Hz", "5Hz", "1Hz", "0.5Hz", NULL };
-
-  class EvrConfig::Private_Data {
+  class EvrConfig_V1::Private_Data {
     enum { MaxPulses=32 };
     enum { MaxOutputs=10 };
   public:
     Private_Data() :
-      _bc      ("Beam"   , EvrConfigType::On, beam_range),
-      _rc      ("Rate"   , EvrConfigType::r30Hz, rate_range),
       _npulses ("Number of Pulses" , 0, 0, MaxPulses),
       _noutputs("Number of Outputs", 0, 0, MaxOutputs),
       _pulseSet("Pulse Definition"  , _pulseArgs , _npulses ),
@@ -35,8 +31,6 @@ namespace Pds_ConfigDb {
     }
 
     void insert(Pds::LinkedList<Parameter>& pList) {
-      pList.insert(&_bc);
-      pList.insert(&_rc);
       pList.insert(&_npulses);
       pList.insert(&_noutputs);
       pList.insert(&_pulseSet);
@@ -44,11 +38,9 @@ namespace Pds_ConfigDb {
     }
 
     int pull(void* from) {
-      const EvrConfigType& tc = *new(from) EvrConfigType;
-      _bc      .value  = tc.beam();
-      _rc      .value  = tc.rate();
-      _npulses .value  = tc.npulses();
-      _noutputs.value  = tc.noutputs();
+      const Pds::EvrData::ConfigV1& tc = *new(from) Pds::EvrData::ConfigV1;
+      _npulses.value  = tc.npulses();
+      _noutputs.value = tc.noutputs();
       for(unsigned k=0; k<tc.npulses(); k++)
 	_pulses[k].pull(const_cast<Pds::EvrData::PulseConfig*>(&tc.pulse(k)));
       for(unsigned k=0; k<tc.noutputs(); k++)
@@ -63,12 +55,10 @@ namespace Pds_ConfigDb {
       Pds::EvrData::OutputMap* mo = new Pds::EvrData::OutputMap[_noutputs.value];
       for(unsigned k=0; k<_noutputs.value; k++)
 	_outputs[k].push(&mo[k]);
-      EvrConfigType& tc = *new(to) EvrConfigType(_bc.value,
-						 _rc.value,
-						 _npulses.value,
-						 pc,
-						 _noutputs.value,
-						 mo);
+      Pds::EvrData::ConfigV1& tc = *new(to) Pds::EvrData::ConfigV1(_npulses.value,
+							  pc,
+							  _noutputs.value,
+							  mo);
       
       delete[] pc;
       delete[] mo;
@@ -76,13 +66,11 @@ namespace Pds_ConfigDb {
     }
 
     int dataSize() const {
-      return sizeof(EvrConfigType) + 
+      return sizeof(Pds::EvrData::ConfigV1) + 
 	_npulses .value*sizeof(Pds::EvrData::PulseConfig) + 
 	_noutputs.value*sizeof(Pds::EvrData::OutputMap);
     }
   public:
-    Enumerated<EvrConfigType::BeamCode> _bc;
-    Enumerated<EvrConfigType::RateCode> _rc;
     NumericInt<unsigned>    _npulses;
     NumericInt<unsigned>    _noutputs;
     EvrPulseConfig _pulses [MaxPulses];
@@ -95,26 +83,21 @@ namespace Pds_ConfigDb {
 };
 
 
-EvrConfig::EvrConfig() : 
-  Serializer("Evr_Config"),
+EvrConfig_V1::EvrConfig_V1() : 
+  Serializer("Evr_Config_V1"),
   _private_data( new Private_Data )
 {
   _private_data->insert(pList);
 }
 
-int  EvrConfig::readParameters (void* from) {
+int  EvrConfig_V1::readParameters (void* from) {
   return _private_data->pull(from);
 }
 
-int  EvrConfig::writeParameters(void* to) {
+int  EvrConfig_V1::writeParameters(void* to) {
   return _private_data->push(to);
 }
 
-int  EvrConfig::dataSize() const {
+int  EvrConfig_V1::dataSize() const {
   return _private_data->dataSize();
 }
-
-#include "Parameters.icc"
-
-template class Enumerated<Pds::EvrData::ConfigV2::BeamCode>;
-template class Enumerated<Pds::EvrData::ConfigV2::RateCode>;
