@@ -16,7 +16,8 @@ libsrcs_configdb += Serializer.cc
 libsrcs_configdb += Opal1kConfig.cc
 libsrcs_configdb += TM6740Config.cc
 libsrcs_configdb += FrameFexConfig.cc
-libsrcs_configdb += EvrConfig.cc
+libsrcs_configdb += EvrOutputMap.cc EvrPulseConfig.cc
+libsrcs_configdb += EvrConfig.cc EvrConfig_V1.cc
 libsrcs_configdb += ControlConfig.cc
 libsrcs_configdb += AcqConfig.cc
 libsrcs_configdb += Parameters.cc
